--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <title>Home</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="styles/styles.css" />
     <script src="https://cdn.tailwindcss.com"></script>
-    <script type="module" src="script.js"></script>
+    <script type="module" src="scripts/script.js"></script>
     <script>
       tailwind.config = {
         theme: {
@@ -17,14 +17,14 @@
       };
     </script>
   </head>
-  <body>
-    <header class="w-screen h-24 p-4 flex gap-2 justify-center items-center bg-green-500">
+  <body class="overflow-x-hidden">
+    <header class="w-full h-24 p-4 flex gap-2 justify-center items-center">
       <p class="text-4xl font-bold">M</p>
       <img class="h-full" src="./assets/code_civil.svg" alt="CodeCivil" />
       <p class="text-4xl font-bold">A</p>
     </header>
-    <section>
-    <a href="https://lh3.googleusercontent.com/2Fz6Fn5zq_hh75oNLsyNqyGSHzPopHojN77Eu6GImw_3bb4JteONR_K8lnCY2nRbZQV9RD7ACVYvTHEEoW6oGt2GNkAVXzsGdHl1XI9JWwr9ojo3N7t5mYgqaux8lESdvi4mJTti4Ok=w2400?source=screenshot.guru"> <img src="https://photos.app.goo.gl/EaoGpZT32jz3c9yA9" /> </a>
+    <section class="w-screen h-dvh image-container">
+      <img class="absolute h-full" src="https://picsum.photos/720/1240" alt="Nosotros">
     </section>
     <section></section>
     <section></section>
