--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <img class="h-full" src="./assets/code_civil.svg" alt="CodeCivil" />
       <p class="text-4xl font-bold">A</p>
     </header>
-    <section class="w-screen h-dvh image-container">
+    <section class="w-screen h-dvh relative image-container">
       <img class="absolute h-full" src="https://picsum.photos/720/1240" alt="Nosotros">
     </section>
     <section></section>
