--- a/index.html
+++ b/index.html
@@ -1,39 +1,167 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>Home</title>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width" />
-    <link rel="stylesheet" href="styles/styles.css" />
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script type="module" src="scripts/script.js"></script>
-    <script>
-      tailwind.config = {
-        theme: {
-          extend: {
-            colors: {},
-          },
+
+<head>
+  <title>Home</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width" />
+  <link rel="stylesheet" href="styles/styles.css" />
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script type="module" src="scripts/script.js"></script>
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          colors: {},
         },
-      };
-    </script>
-  </head>
-  <body class="overflow-x-hidden">
-    <header class="w-full h-24 p-4 flex gap-2 justify-center items-center">
-      <p class="text-4xl font-bold">M</p>
-      <img class="h-full" src="./assets/code_civil.svg" alt="CodeCivil" />
-      <p class="text-4xl font-bold">A</p>
-    </header>
-    <section class="w-screen h-dvh relative image-container">
-      <img class="absolute h-full" src="https://picsum.photos/720/1240" alt="Nosotros">
-    </section>
-    <section></section>
-    <section></section>
-    <section></section>
-    <section></section>
-    <section></section>
-    <section></section>
-    <section></section>
-    <section></section>
-    <section></section>
-  </body>
+      },
+    };
+  </script>
+</head>
+
+<body class="overflow-x-hidden">
+  <header class="w-full h-24 p-4 flex gap-2 justify-center items-center">
+    <p class="text-4xl font-bold">M</p>
+    <img class="h-full" src="./assets/code_civil.svg" alt="CodeCivil" />
+    <p class="text-4xl font-bold">A</p>
+  </header>
+  <section>
+    <blockquote class="text-xl italic font-semibold text-gray-900">
+      <p>"Más valen dos que uno, porque obtienen más fruto de su esfuerzo.
+        ¡Ay del que cae y no tiene quien lo levante!" <span class="not-italic">- Eclesiastés 4:9-10</span></p>
+    </blockquote>
+  </section>
+  <section class="w-screen h-dvh">
+    <img class="h-full m-auto mask-y" src="https://picsum.photos/720/1240" alt="Nosotros">
+  </section>
+  <section>
+    <p class="text-md text-center">Con la bendición de Dios y nuestros padres:</p>
+    <div class="flex flex-row text-xs gap-2">
+      <div class="flex flex-col m-auto text-center gap-2">
+        <p>Magda Azucena Fernández Meda</p>
+        <p>Otto René Casado Zamora</p>
+      </div>
+      <div class="flex flex-col m-auto text-center gap-2">
+        <p>María Elena Fuentes Martínez</p>
+        <p>Ricardo Feliciano Chávez Cali</p>
+      </div>
+    </div>
+  </section>
+  <section>
+    <h1 class="text-4xl text-center">
+      Andrea & Marco
+    </h1>
+  </section>
+  <section>
+    <p class="m-auto text-center">Los invitamos a nuestra boda religiosa</p>
+    <p class="m-auto text-center">09 de noviembre de 2024</p>
+    <p class="m-auto text-center"></p>
+  </section>
+
+  <!-- Section 4: Invitation place -->
+  <section class="max-w-full relative flex flex-col items-center justify-center gap-8 px-8 ">
+    <p class="dancing-script-700 text-4xl">
+      Ceremonia religiosa
+    </p>
+    <div>
+      <div class="flex flex-col items-center gap-2">
+        <p class="text-md text-center">
+          Parroquia Inmaculado Corazón de María
+        </p>
+        <p class="text-sm">Hora: <span>02:00 AM</span></p>
+        <a class="border-2 border-solid border-stone-700 px-4 py-2 m-2 hover:bg-zinc-700 hover:text-gray-200"
+          href="https://maps.app.goo.gl/nagQ1iB7B8d9eSA67" target="_blank">Ver ubicación</a>
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3861.0834242186647!2d-90.55375076830384!3d14.594321984244905!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8589a11132fbfa3b%3A0x5e7a6fcdc42da683!2sParroquia%20Inmaculado%20Coraz%C3%B3n%20de%20Mar%C3%ADa!5e0!3m2!1ses-419!2sgt!4v1726667850001!5m2!1ses-419!2sgt"
+          width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"></iframe>
+      </div>
+    </div>
+  </section>
+
+  <!-- Section 4: Invitation place -->
+  <section class="max-w-full relative flex flex-col items-center justify-center gap-8 px-8 ">
+    <p class="dancing-script-700 text-4xl">
+      Recepción
+    </p>
+    <div>
+      <div class="flex flex-col items-center gap-2">
+        <p class="text-md text-center">
+          Centro Cultural Paseo de los Campeones
+        </p>
+        <p class="text-sm">Hora: <span>05:00 AM</span></p>
+        <a class="border-2 border-solid border-stone-700 px-4 py-2 m-2 hover:bg-zinc-700 hover:text-gray-200"
+          href="https://www.google.com.mx/maps/place/Centro+Cultural+Paseo+de+los+Campeones/@14.6552466,-90.5717482,21z/data=!4m6!3m5!1s0x8589a1a8a78cfb89:0x36167cfaf3106e8d!8m2!3d14.6552654!4d-90.571769!16s%2Fg%2F11qpl7_r10?entry=ttu"
+          target="_blank">Ver ubicación</a>
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d241.25076504171665!2d-90.5717482!3d14.6552466!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8589a1a8a78cfb89%3A0x36167cfaf3106e8d!2sCentro%20Cultural%20Paseo%20de%20los%20Campeones!5e0!3m2!1ses-419!2sgt!4v1726668502981!5m2!1ses-419!2sgt"
+          width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"></iframe>
+      </div>
+    </div>
+  </section>
+
+  <!-- Sección 5: Invitatino gifts -->
+  <section class="max-w-full relative flex flex-col items-center justify-center gap-8 px-8 ">
+    <img class="w-48 self-start absolute -left-20 -bottom-14 rotate-45" style="z-index: -10;"
+      src="./resources/eucalyptus.webp" alt="eucalyptus" />
+    <img width="94" height="94" src="https://img.icons8.com/3d-fluency/94/gift.png" alt="gift" />
+    <text class="dancing-script-700 text-4xl" style="color:#CFB53B">Sugerencias de regalo</text>
+    <div class="grid grid-cols-1 gap-10 md:grid-cols-2">
+      <div class="flex flex-col items-center gap-2">
+        <div class="flex flex-col place-content-center place-items-center gap-2">
+          <img class="w-20" src="https://cemacogt.vtexassets.com/arquivos/logoCortoMobile.png" alt="Cemaco Logo" />
+          <p class="text-xs">* Indicar que es para la boda</p>
+        </div>
+        <a class="border-2 border-solid border-stone-700 px-4 py-2 m-2 hover:bg-zinc-700 hover:text-gray-200"
+          href="https://www.cemaco.com/list/chavezcasado" target="_blank">Lista de regalos</a>
+      </div>
+      <div class="flex flex-col items-center gap-2">
+        <p class="text-center max-w-screen-sm">
+          Su asistencia a nuestra boda será regalo suficiente.
+          Pero si desean apoyarnos para comprar nuestra casa,
+          les dejamos los datos de nuestra cuenta bancaria:
+        </p>
+        <p class="text-center text-xl font-bold">BANRURAL</p>
+        <p class="text-center">Cuenta de ahorro:</p>
+        <p class="text-center text-xl">
+          Andrea Susana Casado Fernández -
+          <span>4237131303</span>
+        </p>
+      </div>
+    </div>
+  </section>
+
+  <!-- Section 7: Invitation confirmation -->
+  <section class="max-w-full flex flex-col items-center justify-center gap-8 px-8 ">
+    <img width="94" height="94" src="https://img.icons8.com/3d-fluency/94/paper-plane.png" alt="paper-plane" />
+    <p class="dancing-script-700 text-4xl" style="color:#CFB53B">
+      Confirmar asistencia
+    </p>
+    <div class="grid grid-cols-1 gap-10 md:grid-cols-2">
+      <div class="flex flex-col items-center gap-2">
+        <img width="60" height="60" src="https://img.icons8.com/emoji/60/person-with-veil.png" alt="person-with-veil" />
+        <a class="bg-green-400 px-4 py-2 m-2 hover:bg-green-600 dark:text-gray-800" aria-label="Chat on WhatsApp"
+          href="https://wa.me/50235174023">WhatsApp</a>
+      </div>
+      <div class="flex flex-col items-center gap-2">
+        <img width="60" height="60" src="https://img.icons8.com/color/60/groom.png" alt="groom" />
+        <a class="bg-green-400 px-4 py-2 m-2 hover:bg-green-600 dark:text-gray-800" aria-label="Chat on WhatsApp"
+          href="https://wa.me/50235468093">WhatsApp</a>
+      </div>
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer
+    class="max-w-full flex flex-col items-center justify-center gap-2 py-10 text-center text-gray-200 h-60 px-4 0">
+    <p class="text-gray-800">
+      Los mejores momentos de la vida merecen ser compartidos
+    </p>
+    <h3 class="dancing-script-400 text-4xl text-gray-500">
+      ¡Gracias por acompañarnos!
+    </h3>
+  </footer>
+</body>
+
 </html>
