--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </script>
 </head>
 
-<body class="overflow-x-hidden">
+<body class="max-w-screen overflow-x-hidden px-4">
   <header class="w-full h-24 p-4 flex gap-2 justify-center items-center">
     <p class="text-4xl font-bold">M</p>
     <img class="h-full" src="./assets/code_civil.svg" alt="CodeCivil" />
@@ -32,7 +32,7 @@
     </blockquote>
   </section>
   <section class="w-screen h-dvh">
-    <img class="h-full m-auto mask-y" src="https://picsum.photos/720/1240" alt="Nosotros">
+    <img class="h-full m-auto mask-y" src="./assets/WhatsApp Image 2024-09-18 at 2.24.40 PM.jpeg" alt="Nosotros">
   </section>
   <section>
     <p class="text-md text-center">Con la bendición de Dios y nuestros padres:</p>
@@ -73,7 +73,7 @@
           href="https://maps.app.goo.gl/nagQ1iB7B8d9eSA67" target="_blank">Ver ubicación</a>
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3861.0834242186647!2d-90.55375076830384!3d14.594321984244905!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8589a11132fbfa3b%3A0x5e7a6fcdc42da683!2sParroquia%20Inmaculado%20Coraz%C3%B3n%20de%20Mar%C3%ADa!5e0!3m2!1ses-419!2sgt!4v1726667850001!5m2!1ses-419!2sgt"
-          width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+          height="500px" style="border:0;" allowfullscreen="" loading="lazy"
           referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
     </div>
@@ -95,7 +95,7 @@
           target="_blank">Ver ubicación</a>
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d241.25076504171665!2d-90.5717482!3d14.6552466!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8589a1a8a78cfb89%3A0x36167cfaf3106e8d!2sCentro%20Cultural%20Paseo%20de%20los%20Campeones!5e0!3m2!1ses-419!2sgt!4v1726668502981!5m2!1ses-419!2sgt"
-          width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+          height="500px" style="border:0;" allowfullscreen="" loading="lazy"
           referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
     </div>
@@ -103,10 +103,8 @@
 
   <!-- Sección 5: Invitatino gifts -->
   <section class="max-w-full relative flex flex-col items-center justify-center gap-8 px-8 ">
-    <img class="w-48 self-start absolute -left-20 -bottom-14 rotate-45" style="z-index: -10;"
-      src="./resources/eucalyptus.webp" alt="eucalyptus" />
     <img width="94" height="94" src="https://img.icons8.com/3d-fluency/94/gift.png" alt="gift" />
-    <text class="dancing-script-700 text-4xl" style="color:#CFB53B">Sugerencias de regalo</text>
+    <text class="dancing-script-700 text-4xl text-center" style="color:#CFB53B">Sugerencias de regalo</text>
     <div class="grid grid-cols-1 gap-10 md:grid-cols-2">
       <div class="flex flex-col items-center gap-2">
         <div class="flex flex-col place-content-center place-items-center gap-2">
