--- a/index.html
+++ b/index.html
@@ -19,23 +19,23 @@
   </script>
 </head>
 
-<body class="max-w-screen overflow-x-hidden px-4">
+<body class="max-w-screen overflow-x-hidden">
   <header class="w-full h-24 p-4 flex gap-2 justify-center items-center">
     <p class="text-4xl font-bold">M</p>
     <img class="h-full" src="./assets/code_civil.svg" alt="CodeCivil" />
     <p class="text-4xl font-bold">A</p>
   </header>
   <section>
-    <blockquote class="text-xl italic font-semibold text-gray-900">
+    <blockquote class="text-xl italic font-semibold text-gray-900 px-4">
       <p>"Más valen dos que uno, porque obtienen más fruto de su esfuerzo.
         ¡Ay del que cae y no tiene quien lo levante!" <span class="not-italic">- Eclesiastés 4:9-10</span></p>
     </blockquote>
   </section>
-  <section class="w-screen h-dvh">
-    <img class="h-full m-auto mask-y" src="./assets/WhatsApp Image 2024-09-18 at 2.24.40 PM.jpeg" alt="Nosotros">
+  <section class="w-dvw h-dvw">
+    <img class="h-fit max-w-full m-auto mask-y" src="./assets/WhatsApp Image 2024-09-18 at 2.24.40 PM.jpeg" alt="Nosotros">
   </section>
-  <section>
-    <p class="text-md text-center">Con la bendición de Dios y nuestros padres:</p>
+  <section class="py-8">
+    <p class="text-md text-center py-4">Con la bendición de Dios y nuestros padres:</p>
     <div class="flex flex-row text-xs gap-2">
       <div class="flex flex-col m-auto text-center gap-2">
         <p>Magda Azucena Fernández Meda</p>
@@ -47,19 +47,18 @@
       </div>
     </div>
   </section>
-  <section>
+  <section class="py-8">
     <h1 class="text-4xl text-center">
       Andrea & Marco
     </h1>
   </section>
-  <section>
-    <p class="m-auto text-center">Los invitamos a nuestra boda religiosa</p>
+  <section class="py-8">
+    <p class="m-auto text-center py-4">Los invitamos a nuestra boda religiosa</p>
     <p class="m-auto text-center">09 de noviembre de 2024</p>
-    <p class="m-auto text-center"></p>
   </section>
 
   <!-- Section 4: Invitation place -->
-  <section class="max-w-full relative flex flex-col items-center justify-center gap-8 px-8 ">
+  <section class="max-w-full relative flex flex-col items-center justify-center gap-8 p-8">
     <p class="dancing-script-700 text-4xl">
       Ceremonia religiosa
     </p>
@@ -68,7 +67,10 @@
         <p class="text-md text-center">
           Parroquia Inmaculado Corazón de María
         </p>
-        <p class="text-sm">Hora: <span>02:00 AM</span></p>
+        <p class="text-xs text-center">
+          7A Avenida 27-03 Colonia La Reformita, Cdad. de Guatemala
+        </p>
+        <p class="text-xs">Hora: <span>02:00 PM</span></p>
         <a class="border-2 border-solid border-stone-700 px-4 py-2 m-2 hover:bg-zinc-700 hover:text-gray-200"
           href="https://maps.app.goo.gl/nagQ1iB7B8d9eSA67" target="_blank">Ver ubicación</a>
         <iframe
@@ -80,7 +82,7 @@
   </section>
 
   <!-- Section 4: Invitation place -->
-  <section class="max-w-full relative flex flex-col items-center justify-center gap-8 px-8 ">
+  <section class="max-w-full relative flex flex-col items-center justify-center gap-8 p-8 ">
     <p class="dancing-script-700 text-4xl">
       Recepción
     </p>
@@ -89,7 +91,10 @@
         <p class="text-md text-center">
           Centro Cultural Paseo de los Campeones
         </p>
-        <p class="text-sm">Hora: <span>05:00 AM</span></p>
+        <p class="text-xs text-center">
+          Bulevar San Nicolas 8-31, Cdad. de Guatemala
+        </p>
+        <p class="text-xs">Hora: <span>05:00 PM</span></p>
         <a class="border-2 border-solid border-stone-700 px-4 py-2 m-2 hover:bg-zinc-700 hover:text-gray-200"
           href="https://www.google.com.mx/maps/place/Centro+Cultural+Paseo+de+los+Campeones/@14.6552466,-90.5717482,21z/data=!4m6!3m5!1s0x8589a1a8a78cfb89:0x36167cfaf3106e8d!8m2!3d14.6552654!4d-90.571769!16s%2Fg%2F11qpl7_r10?entry=ttu"
           target="_blank">Ver ubicación</a>
@@ -102,7 +107,7 @@
   </section>
 
   <!-- Sección 5: Invitatino gifts -->
-  <section class="max-w-full relative flex flex-col items-center justify-center gap-8 px-8 ">
+  <section class="max-w-full relative flex flex-col items-center justify-center gap-8 p-8 ">
     <img width="94" height="94" src="https://img.icons8.com/3d-fluency/94/gift.png" alt="gift" />
     <text class="dancing-script-700 text-4xl text-center" style="color:#CFB53B">Sugerencias de regalo</text>
     <div class="grid grid-cols-1 gap-10 md:grid-cols-2">
@@ -131,9 +136,9 @@
   </section>
 
   <!-- Section 7: Invitation confirmation -->
-  <section class="max-w-full flex flex-col items-center justify-center gap-8 px-8 ">
+  <section class="max-w-full flex flex-col items-center justify-center gap-8 p-8 ">
     <img width="94" height="94" src="https://img.icons8.com/3d-fluency/94/paper-plane.png" alt="paper-plane" />
-    <p class="dancing-script-700 text-4xl" style="color:#CFB53B">
+    <p class="dancing-script-700 text-4xl text-center" style="color:#CFB53B">
       Confirmar asistencia
     </p>
     <div class="grid grid-cols-1 gap-10 md:grid-cols-2">
