--- a/index.html
+++ b/index.html
@@ -5,66 +5,64 @@
   <title>Home</title>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Tangerine:wght@400;700&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="styles/styles.css" />
   <script src="https://cdn.tailwindcss.com"></script>
   <script type="module" src="scripts/script.js"></script>
-  <script>
-    tailwind.config = {
-      theme: {
-        extend: {
-          colors: {},
-        },
-      },
-    };
-  </script>
 </head>
 
-<body class="max-w-screen overflow-x-hidden">
+<body class="max-w-screen font-lato overflow-x-hidden">
   <header class="w-full h-24 p-4 flex gap-2 justify-center items-center">
     <p class="text-4xl font-bold">M</p>
     <img class="h-full" src="./assets/code_civil.svg" alt="CodeCivil" />
     <p class="text-4xl font-bold">A</p>
   </header>
   <section>
-    <blockquote class="text-xl italic font-semibold text-gray-900 px-4">
+    <blockquote class="text-4xl italic text-center font-semibold font-tangerine text-old-gold px-4">
       <p>"Más valen dos que uno, porque obtienen más fruto de su esfuerzo.
         ¡Ay del que cae y no tiene quien lo levante!" <span class="not-italic">- Eclesiastés 4:9-10</span></p>
     </blockquote>
   </section>
   <section class="w-dvw h-dvw">
-    <img class="h-fit max-w-full m-auto mask-y" src="./assets/WhatsApp Image 2024-09-18 at 2.24.40 PM.jpeg" alt="Nosotros">
+    <img class="h-fit max-w-full m-auto mask-y" src="./assets/WhatsApp Image 2024-09-18 at 2.24.40 PM.jpeg"
+      alt="Nosotros">
   </section>
   <section class="py-8">
     <p class="text-md text-center py-4">Con la bendición de Dios y nuestros padres:</p>
     <div class="flex flex-row text-xs gap-2">
-      <div class="flex flex-col m-auto text-center gap-2">
+      <div class="flex flex-col m-auto text-center font-bold gap-2">
         <p>Magda Azucena Fernández Meda</p>
         <p>Otto René Casado Zamora</p>
       </div>
-      <div class="flex flex-col m-auto text-center gap-2">
+      <div class="flex flex-col m-auto text-center font-bold gap-2">
         <p>María Elena Fuentes Martínez</p>
         <p>Ricardo Feliciano Chávez Cali</p>
       </div>
     </div>
   </section>
   <section class="py-8">
-    <h1 class="text-4xl text-center">
+    <h1 class="text-8xl text-center font-tangerine text-old-gold">
       Andrea & Marco
     </h1>
   </section>
   <section class="py-8">
-    <p class="m-auto text-center py-4">Los invitamos a nuestra boda religiosa</p>
+    <p class="m-auto text-center font-bold py-2">Los invitamos a nuestra boda religiosa</p>
     <p class="m-auto text-center">09 de noviembre de 2024</p>
   </section>
 
   <!-- Section 4: Invitation place -->
   <section class="max-w-full relative flex flex-col items-center justify-center gap-8 p-8">
-    <p class="dancing-script-700 text-4xl">
+    <img src="https://img.icons8.com/?size=100&id=aKLNdPErlXgQ&format=png&color=000000" alt="Church ico">
+    <p class="text-4xl text-center font-tangerine text-old-gold">
       Ceremonia religiosa
     </p>
     <div>
       <div class="flex flex-col items-center gap-2">
-        <p class="text-md text-center">
+        <p class="text-md text-center font-bold">
           Parroquia Inmaculado Corazón de María
         </p>
         <p class="text-xs text-center">
@@ -83,12 +81,13 @@
 
   <!-- Section 4: Invitation place -->
   <section class="max-w-full relative flex flex-col items-center justify-center gap-8 p-8 ">
-    <p class="dancing-script-700 text-4xl">
+    <img src="https://img.icons8.com/?size=100&id=GsDDryO9KhqB&format=png&color=000000" alt="Party">
+    <p class="text-4xl font-tangerine text-old-gold">
       Recepción
     </p>
     <div>
       <div class="flex flex-col items-center gap-2">
-        <p class="text-md text-center">
+        <p class="text-md text-center font-bold">
           Centro Cultural Paseo de los Campeones
         </p>
         <p class="text-xs text-center">
@@ -109,7 +108,7 @@
   <!-- Sección 5: Invitatino gifts -->
   <section class="max-w-full relative flex flex-col items-center justify-center gap-8 p-8 ">
     <img width="94" height="94" src="https://img.icons8.com/3d-fluency/94/gift.png" alt="gift" />
-    <text class="dancing-script-700 text-4xl text-center" style="color:#CFB53B">Sugerencias de regalo</text>
+    <text class="text-4xl text-center font-tangerine text-old-gold">Sugerencias de regalo</text>
     <div class="grid grid-cols-1 gap-10 md:grid-cols-2">
       <div class="flex flex-col items-center gap-2">
         <div class="flex flex-col place-content-center place-items-center gap-2">
@@ -137,8 +136,8 @@
 
   <!-- Section 7: Invitation confirmation -->
   <section class="max-w-full flex flex-col items-center justify-center gap-8 p-8 ">
-    <img width="94" height="94" src="https://img.icons8.com/3d-fluency/94/paper-plane.png" alt="paper-plane" />
-    <p class="dancing-script-700 text-4xl text-center" style="color:#CFB53B">
+    <img src="https://img.icons8.com/?size=100&id=DUEq8l5qTqBE&format=png&color=000000" alt="Messages">
+    <p class="text-4xl text-center font-tangerine text-old-gold">
       Confirmar asistencia
     </p>
     <div class="grid grid-cols-1 gap-10 md:grid-cols-2">
@@ -158,10 +157,10 @@
   <!-- Footer -->
   <footer
     class="max-w-full flex flex-col items-center justify-center gap-2 py-10 text-center text-gray-200 h-60 px-4 0">
-    <p class="text-gray-800">
+    <p class="text-gray-800 font-bold">
       Los mejores momentos de la vida merecen ser compartidos
     </p>
-    <h3 class="dancing-script-400 text-4xl text-gray-500">
+    <h3 class="text-4xl font-tangerine text-old-gold">
       ¡Gracias por acompañarnos!
     </h3>
   </footer>
