--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </blockquote>
   </section>
   <section class="w-dvw h-dvw">
-    <img class="h-fit max-w-full m-auto mask-y" src="./assets/WhatsApp Image 2024-09-18 at 2.24.40 PM.jpeg"
+    <img class="h-fit w-full max-w-screen-md m-auto mask-y" src="./assets/WhatsApp Image 2024-09-18 at 2.24.40 PM.jpeg"
       alt="Nosotros">
   </section>
   <section class="py-8">
@@ -152,6 +152,14 @@
           href="https://wa.me/50235468093">WhatsApp</a>
       </div>
     </div>
+  </section>
+
+  <section class="mosaico">
+    <img src="./assets/Wedding-rings.webp" alt="Foto 5">
+    <img src="./assets/WhatsApp Image 2024-09-18 at 2.24.36 PM.jpeg" alt="Foto 1">
+    <img src="./assets/WhatsApp Image 2024-09-18 at 2.24.37 PM.jpeg" alt="Foto 2">
+    <img src="./assets/WhatsApp Image 2024-09-18 at 2.24.38 PM.jpeg" alt="Foto 3">
+    <img src="./assets/WhatsApp Image 2024-09-18 at 2.24.40 PM.jpeg" alt="Foto 4">
   </section>
 
   <!-- Footer -->
