--- a/index.html
+++ b/index.html
@@ -21,16 +21,22 @@
     <img class="h-full" src="./assets/code_civil.svg" alt="CodeCivil" />
     <p class="text-4xl font-bold">A</p>
   </header>
+
+  <!-- Section:  -->
   <section>
     <blockquote class="text-4xl italic text-center font-semibold font-tangerine text-old-gold px-4">
       <p>"Más valen dos que uno, porque obtienen más fruto de su esfuerzo.
         ¡Ay del que cae y no tiene quien lo levante!" <span class="not-italic">- Eclesiastés 4:9-10</span></p>
     </blockquote>
   </section>
+
+  <!-- Section: -->
   <section class="w-dvw h-dvw">
     <img class="h-fit w-full max-w-screen-md m-auto mask-y" src="./assets/WhatsApp Image 2024-09-18 at 2.24.40 PM.jpeg"
       alt="Nosotros">
   </section>
+
+  <!-- Section: -->
   <section class="py-8">
     <p class="text-md text-center py-4">Con la bendición de Dios y nuestros padres:</p>
     <div class="flex flex-row text-xs gap-2">
@@ -44,11 +50,15 @@
       </div>
     </div>
   </section>
+
+  <!-- Section:  -->
   <section class="py-8">
     <h1 class="text-8xl text-center font-tangerine text-old-gold">
       Andrea & Marco
     </h1>
   </section>
+
+  <!-- Section:  -->
   <section class="py-8">
     <p class="m-auto text-center font-bold py-2">Los invitamos a nuestra boda religiosa</p>
     <p class="m-auto text-center">09 de noviembre de 2024</p>
@@ -154,7 +164,8 @@
     </div>
   </section>
 
-  <section class="mosaico">
+  <!-- Section 8: Gallery -->
+  <section class="gallery grid gap-2 grid-cols-2 auto-rows-fr auto-flow grid-flow-row-dense md:grid-cols-3">
     <img src="./assets/Wedding-rings.webp" alt="Foto 5">
     <img src="./assets/WhatsApp Image 2024-09-18 at 2.24.36 PM.jpeg" alt="Foto 1">
     <img src="./assets/WhatsApp Image 2024-09-18 at 2.24.37 PM.jpeg" alt="Foto 2">
