--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     rel="stylesheet">
   <link rel="stylesheet" href="styles/styles.css" />
   <script src="https://cdn.tailwindcss.com"></script>
-  <script type="module" src="scripts/script.js"></script>
+  <script src="scripts/tailwind.config.js"></script>
+  <script src="scripts/counter.js"></script>
 </head>
 
 <body class="max-w-screen font-lato overflow-x-hidden">
@@ -28,6 +29,7 @@
       <p>"Más valen dos que uno, porque obtienen más fruto de su esfuerzo.
         ¡Ay del que cae y no tiene quien lo levante!" <span class="not-italic">- Eclesiastés 4:9-10</span></p>
     </blockquote>
+    <div class="flex w-full justify-center gap-2 p-4" id="countdown"></div>
   </section>
 
   <!-- Section: -->
