--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="scripts/tailwind.config.js"></script>
   <script src="scripts/counter.js"></script>
+  <script src="scripts/popup.js"></script>
 </head>
 
 <body class="max-w-screen font-lato overflow-x-hidden">
@@ -34,7 +35,9 @@
 
   <!-- Section: -->
   <section class="w-dvw h-dvw">
-    <img class="h-fit w-full max-w-screen-md m-auto mask-y" src="./assets/WhatsApp Image 2024-09-18 at 2.24.40 PM.jpeg"
+    <img 
+      class="h-fit w-full max-w-screen-md m-auto mask-y" 
+      src="./assets/cover-photo.jpeg"
       alt="Nosotros">
   </section>
 
@@ -167,12 +170,22 @@
   </section>
 
   <!-- Section 8: Gallery -->
-  <section class="gallery grid gap-2 grid-cols-2 auto-rows-fr auto-flow grid-flow-row-dense md:grid-cols-3">
-    <img src="./assets/Wedding-rings.webp" alt="Foto 5">
-    <img src="./assets/WhatsApp Image 2024-09-18 at 2.24.36 PM.jpeg" alt="Foto 1">
-    <img src="./assets/WhatsApp Image 2024-09-18 at 2.24.37 PM.jpeg" alt="Foto 2">
-    <img src="./assets/WhatsApp Image 2024-09-18 at 2.24.38 PM.jpeg" alt="Foto 3">
-    <img src="./assets/WhatsApp Image 2024-09-18 at 2.24.40 PM.jpeg" alt="Foto 4">
+  <section id="gallery" class="gallery grid gap-2 grid-cols-3 auto-rows-fr auto-flow grid-flow-row-dense md:grid-cols-5">
+    <img class="gallery-img" src="./assets/rings-wedding.webp" alt="Wedding rings">
+    <img class="gallery-img" src="./assets/photo-1.jpeg" alt="Foto 1">
+    <img class="gallery-img" src="./assets/photo-2.jpeg" alt="Foto 2">
+    <img class="gallery-img" src="./assets/photo-3.jpeg" alt="Foto 3">
+    <img class="gallery-img" src="./assets/photo-4.jpeg" alt="Foto 4">
+    <img class="gallery-img" src="./assets/photo-5.jpeg" alt="Foto 5">
+    <img class="gallery-img" src="./assets/photo-6.jpeg" alt="Foto 6">
+    <img class="gallery-img" src="./assets/photo-7.jpeg" alt="Foto 7">
+    <img class="gallery-img" src="./assets/photo-8.jpeg" alt="Foto 8">
+    <img class="gallery-img" src="./assets/photo-9.jpeg" alt="Foto 9">
+    <img class="gallery-img" src="./assets/photo-10.jpeg" alt="Foto 10">
+    <img class="gallery-img" src="./assets/photo-11.jpeg" alt="Foto 11">
+    <img class="gallery-img" src="./assets/photo-12.jpeg" alt="Foto 12">
+    <img class="gallery-img" src="./assets/photo-13.jpeg" alt="Foto 13">
+    <img class="gallery-img" src="./assets/photo-14.jpeg" alt="Foto 14">
   </section>
 
   <!-- Footer -->
@@ -185,6 +198,12 @@
       ¡Gracias por acompañarnos!
     </h3>
   </footer>
+
+  <!-- POPUP -->
+  <div id="modal" class="hidden fixed z-index-1 left-0 top-0 px-2 py-20 w-full h-full overflow-hidden">
+    <span id="btnClose" class="absolute top-8 right-4 p-2 z-index-2 font-bold text-4xl text-gray-200 cursor-pointer">&times;</span>
+    <img id="fullImage" class="m-auto z-index-2 block w-4/5 max-w-96">
+  </div>
 </body>
 
 </html>
