Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <p>"Más valen dos que uno, porque obtienen más fruto de su esfuerzo.
         ¡Ay del que cae y no tiene quien lo levante!" <span class="not-italic">- Eclesiastés 4:9-10</span></p>
     </blockquote>
-    <div class="flex w-full justify-center gap-2 p-4" id="countdown"></div>
+    <div class="flex w-full justify-center gap-2 px-4 pt-8" id="countdown"></div>
   </section>
 
   <!-- Section: -->
@@ -72,7 +72,7 @@
   <!-- Section 4: Invitation place -->
   <section class="max-w-full relative flex flex-col items-center justify-center gap-8 p-8">
     <img src="https://img.icons8.com/?size=100&id=aKLNdPErlXgQ&format=png&color=000000" alt="Church ico">
-    <p class="text-4xl text-center font-tangerine text-old-gold">
+    <p class="text-9xl text-center font-tangerine text-old-gold">
       Ceremonia religiosa
     </p>
     <div>
