--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <p>"Más valen dos que uno, porque obtienen más fruto de su esfuerzo.
         ¡Ay del que cae y no tiene quien lo levante!" <span class="not-italic">- Eclesiastés 4:9-10</span></p>
     </blockquote>
-    <div class="flex w-full justify-center gap-2 px-4 pt-8" id="countdown"></div>
+    <div class="flex w-full justify-center gap-2 px-4 pt-16" id="countdown"></div>
   </section>
 
   <!-- Section: -->
@@ -43,8 +43,8 @@
 
   <!-- Section: -->
   <section class="py-8">
-    <p class="text-md text-center py-4">Con la bendición de Dios y nuestros padres:</p>
-    <div class="flex flex-row text-xs gap-2">
+    <p class="text-xl text-center py-4">Con la bendición de Dios y nuestros padres:</p>
+    <div class="flex flex-row text-xl gap-2 pt-8">
       <div class="flex flex-col m-auto text-center font-bold gap-2">
         <p>Magda Azucena Fernández Meda</p>
         <p>Otto René Casado Zamora</p>
@@ -58,15 +58,21 @@
 
   <!-- Section:  -->
   <section class="py-8">
-    <h1 class="text-8xl text-center font-tangerine text-old-gold">
+    <h1 class="text-9xl text-center font-tangerine text-old-gold">
       Andrea & Marco
     </h1>
   </section>
 
   <!-- Section:  -->
   <section class="py-8">
-    <p class="m-auto text-center font-bold py-2">Los invitamos a nuestra boda religiosa</p>
-    <p class="m-auto text-center">09 de noviembre de 2024</p>
+    <p class="m-auto text-center text-xl font-bold py-4">Los invitamos a nuestra boda religiosa</p>
+    <div class="py-8">
+      <p class="text-center text-2xl">Sábado</p>
+      <p class="text-center font-bold text-8xl dancing-script-400 text" style="color:#CFB53B">
+        09
+      </p>
+      <p class="text-center text-2xl">Noviembre</p>
+    </div>
   </section>
 
   <!-- Section 4: Invitation place -->
@@ -77,13 +83,13 @@
     </p>
     <div>
       <div class="flex flex-col items-center gap-2">
-        <p class="text-md text-center font-bold">
+        <p class="text-xl text-center font-bold">
           Parroquia Inmaculado Corazón de María
         </p>
-        <p class="text-xs text-center">
+        <p class="text-xl text-center">
           7A Avenida 27-03 Colonia La Reformita, Cdad. de Guatemala
         </p>
-        <p class="text-xs">Hora: <span>02:00 PM</span></p>
+        <p class="text-4xl">Hora: <span>02:00 PM</span></p>
         <a class="border-2 border-solid border-stone-700 px-4 py-2 m-2 hover:bg-zinc-700 hover:text-gray-200"
           href="https://maps.app.goo.gl/nagQ1iB7B8d9eSA67" target="_blank">Ver ubicación</a>
         <iframe
@@ -97,18 +103,18 @@
   <!-- Section 4: Invitation place -->
   <section class="max-w-full relative flex flex-col items-center justify-center gap-8 p-8 ">
     <img src="https://img.icons8.com/?size=100&id=GsDDryO9KhqB&format=png&color=000000" alt="Party">
-    <p class="text-4xl font-tangerine text-old-gold">
+    <p class="text-9xl font-tangerine text-old-gold">
       Recepción
     </p>
     <div>
       <div class="flex flex-col items-center gap-2">
-        <p class="text-md text-center font-bold">
+        <p class="text-xl text-center font-bold">
           Centro Cultural Paseo de los Campeones
         </p>
-        <p class="text-xs text-center">
+        <p class="text-xl text-center">
           Bulevar San Nicolas 8-31, Cdad. de Guatemala
         </p>
-        <p class="text-xs">Hora: <span>05:00 PM</span></p>
+        <p class="text-4xl">Hora: <span>05:00 PM</span></p>
         <a class="border-2 border-solid border-stone-700 px-4 py-2 m-2 hover:bg-zinc-700 hover:text-gray-200"
           href="https://www.google.com.mx/maps/place/Centro+Cultural+Paseo+de+los+Campeones/@14.6552466,-90.5717482,21z/data=!4m6!3m5!1s0x8589a1a8a78cfb89:0x36167cfaf3106e8d!8m2!3d14.6552654!4d-90.571769!16s%2Fg%2F11qpl7_r10?entry=ttu"
           target="_blank">Ver ubicación</a>
@@ -123,7 +129,7 @@
   <!-- Sección 5: Invitatino gifts -->
   <section class="max-w-full relative flex flex-col items-center justify-center gap-8 p-8 ">
     <img width="94" height="94" src="https://img.icons8.com/3d-fluency/94/gift.png" alt="gift" />
-    <text class="text-4xl text-center font-tangerine text-old-gold">Sugerencias de regalo</text>
+    <text class="text-9xl text-center font-tangerine text-old-gold">Sugerencias de regalo</text>
     <div class="grid grid-cols-1 gap-10 md:grid-cols-2">
       <div class="flex flex-col items-center gap-2">
         <div class="flex flex-col place-content-center place-items-center gap-2">
@@ -152,7 +158,7 @@
   <!-- Section 7: Invitation confirmation -->
   <section class="max-w-full flex flex-col items-center justify-center gap-8 p-8 ">
     <img src="https://img.icons8.com/?size=100&id=DUEq8l5qTqBE&format=png&color=000000" alt="Messages">
-    <p class="text-4xl text-center font-tangerine text-old-gold">
+    <p class="text-9xl text-center font-tangerine text-old-gold">
       Confirmar asistencia
     </p>
     <div class="grid grid-cols-1 gap-10 md:grid-cols-2">
