Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           Parroquia Inmaculado Corazón de María
         </p>
         <p class="text-xl text-center">
-          7A Avenida 27-03 Colonia La Reformita, Cdad. de Guatemala
+          7A Avenida 27-03 Colonia La Reformita Zona 12, Cdad. de Guatemala
         </p>
         <p class="text-4xl">Hora: <span>02:00 PM</span></p>
         <a class="border-2 border-solid border-stone-700 px-4 py-2 m-2 hover:bg-zinc-700 hover:text-gray-200"
@@ -112,7 +112,7 @@
           Centro Cultural Paseo de los Campeones
         </p>
         <p class="text-xl text-center">
-          Bulevar San Nicolas 8-31, Cdad. de Guatemala
+          Bulevar San Nicolas 8-31 Zona 4, Mixco
         </p>
         <p class="text-4xl">Hora: <span>05:00 PM</span></p>
         <a class="border-2 border-solid border-stone-700 px-4 py-2 m-2 hover:bg-zinc-700 hover:text-gray-200"
