--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <script src="scripts/tailwind.config.js"></script>
   <script src="scripts/counter.js"></script>
   <script src="scripts/popup.js"></script>
+  <script src="scripts/data.js"></script>
 </head>
 
 <body class="max-w-screen font-lato overflow-x-hidden">
@@ -65,6 +66,7 @@
 
   <!-- Section:  -->
   <section class="py-8">
+    <p id="family-text" class="m-auto text-center text-3xl font-bold py-4"></p>
     <p class="m-auto text-center text-xl font-bold py-4">Los invitamos a nuestra boda religiosa</p>
     <div class="py-8">
       <p class="text-center text-2xl">Sábado</p>
@@ -72,6 +74,10 @@
         09
       </p>
       <p class="text-center text-2xl">Noviembre</p>
+    </div>
+    <div class="flex justify-center w-full gap-4">
+      <p id="adults-text" class="text-3xl font-bold"></p>
+      <p id="childrens-text" class="text-3xl font-bold"></p>
     </div>
   </section>
 
