meta tags added

--- a/index.html
+++ b/index.html
@@ -1,10 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
-  <title>Home</title>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width" />
+  <link rel="icon" type="image/png" sizes="16x16" href="./resources/code_civil.svg" />
+  <!-- Primary Meta Tags -->
+  <title>Andrea y Marco</title>
+  <meta name="title" content="Andrea y Marco" />
+  <meta name="description" content="Bienvenidos a nuestra boda religiosa" />
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://macochave.github.io/Andrea-Marco/" />
+  <meta property="og:title" content="Andrea y Marco" />
+  <meta property="og:description" content="Bienvenidos a nuestra boda religiosa" />
+  <meta property="og:image" content="https://macochave.github.io/Andrea-Marco/resources/code_civil.svg" />
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://macochave.github.io/Andrea-Marco/" />
+  <meta property="twitter:title" content="Andrea y Marco" />
+  <meta property="twitter:description" content="Bienvenidos a nuestra boda religiosa" />
+  <meta property="twitter:image" content="https://macochave.github.io/Andrea-Marco/resources/code_civil.svg" />
+
+  <!-- Meta Tags Generated with https://metatags.io -->
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
@@ -36,10 +57,7 @@
 
   <!-- Section: -->
   <section class="w-dvw h-dvw">
-    <img 
-      class="h-fit w-full max-w-screen-md m-auto mask-y" 
-      src="./assets/cover-photo.jpeg"
-      alt="Nosotros">
+    <img class="h-fit w-full max-w-screen-md m-auto mask-y" src="./assets/cover-photo.jpeg" alt="Nosotros">
   </section>
 
   <!-- Section: -->
@@ -182,7 +200,8 @@
   </section>
 
   <!-- Section 8: Gallery -->
-  <section id="gallery" class="gallery grid gap-2 grid-cols-3 auto-rows-fr auto-flow grid-flow-row-dense md:grid-cols-5">
+  <section id="gallery"
+    class="gallery grid gap-2 grid-cols-3 auto-rows-fr auto-flow grid-flow-row-dense md:grid-cols-5">
     <img class="gallery-img" src="./assets/rings-wedding.webp" alt="Wedding rings">
     <img class="gallery-img" src="./assets/photo-1.jpeg" alt="Foto 1">
     <img class="gallery-img" src="./assets/photo-2.jpeg" alt="Foto 2">
@@ -213,7 +232,8 @@
 
   <!-- POPUP -->
   <div id="modal" class="hidden fixed z-index-1 left-0 top-0 px-2 py-20 w-full h-full overflow-hidden">
-    <span id="btnClose" class="absolute top-8 right-4 p-2 z-index-2 font-bold text-4xl text-gray-200 cursor-pointer">&times;</span>
+    <span id="btnClose"
+      class="absolute top-8 right-4 p-2 z-index-2 font-bold text-4xl text-gray-200 cursor-pointer">&times;</span>
     <img id="fullImage" class="m-auto z-index-2 block w-4/5 max-w-96">
   </div>
 </body>
